--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,12 @@
     <version>2.8.2</version>
 </dependency>
 
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>2.8.9</version>
+    <scope>test</scope>
+</dependency>
+
   </dependencies>
 </project>
