--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,25 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <repositories>  
+    <repository>     
+     <id>jitpack.io</id>       
+     <url>https://jitpack.io</url>   
+   </repository>  
+  </repositories>
+
   <dependencies>
     <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
     <version>4.4</version>
     <scope>test</scope>
+</dependency>
+
+<dependency>    
+  <groupId>Simplex-Solver-Solucion</groupId>
+  <artifactId>Simplex-Solver</artifactId>
+  <version>0.0.1-SNAPSHOT</version>  
 </dependency>
 
 <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
