--- a/pom.xml
+++ b/pom.xml
@@ -7,33 +7,64 @@
   <version>1.0.0</version>
   <packaging>jar</packaging>
 
-  <name>TP_Anual</name>
+  <name>Sistema de Gestion Energetica</name>
   <url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+<properties>
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
 
-  <repositories>  
-    <repository>     
-     <id>jitpack.io</id>       
-     <url>https://jitpack.io</url>   
-   </repository>  
-  </repositories>
+
+<repositories>
+<!--
+	<repository>
+		<id>jitpack.io</id>
+		<url>https://jitpack.io</url>
+	</repository>
+-->
+	<repository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net repository</name>
+            <url>http://download.java.net/maven/2</url>
+        </repository>
+        <repository>
+            <id>osgeo</id>
+            <name>Open Source Geospatial Foundation Repository</name>
+            <url>http://download.osgeo.org/webdav/geotools/</url>
+        </repository>
+        <repository>
+          <id>boundless</id>
+          <name>Boundless Maven Repository</name>
+          <url>http://repo.boundlessgeo.com/main</url>
+        </repository>
+</repositories>
 
   <dependencies>
     <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
-    <version>4.4</version>
+    <version>4.12</version>
     <scope>test</scope>
 </dependency>
 
-<dependency>    
-  <groupId>Simplex-Solver-Solucion</groupId>
-  <artifactId>Simplex-Solver</artifactId>
-  <version>0.0.1-SNAPSHOT</version>  
+<!--
+<dependency>
+	    <groupId>com.github.dds-utnfrba-17</groupId>
+	    <artifactId>Simplex-Solucion</artifactId>
+	    <version>master-96104e7c61-1</version>
 </dependency>
+-->
+
+<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+<!--
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-math3</artifactId>
+    <version>3.6.1</version>
+</dependency>
+-->
 
 <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 <dependency>
@@ -48,6 +79,18 @@
     <version>2.8.9</version>
     <scope>test</scope>
 </dependency>
+
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-shapefile</artifactId>
+            <version>19.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-swing</artifactId>
+            <version>19.1</version>
+        </dependency>
+
 
   </dependencies>
 </project>
