--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
-    <version>4.12</version>
+    <version>4.4</version>
     <scope>test</scope>
 </dependency>
 
@@ -82,15 +82,9 @@
 
         <dependency>
             <groupId>org.geotools</groupId>
-            <artifactId>gt-shapefile</artifactId>
+            <artifactId>gt-referencing</artifactId>
             <version>19.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.geotools</groupId>
-            <artifactId>gt-swing</artifactId>
-            <version>19.1</version>
-        </dependency>
-
 
   </dependencies>
 </project>
