--- a/.classpath
+++ b/.classpath
@@ -1,78 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry kind="src" path="src/test/java" output="target/test-classes" including="**/*.java"/>
-  <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
-  <classpathentry kind="output" path="target/classes"/>
-  <classpathentry kind="var" path="M2_REPO/javax/media/jai_core/1.1.3/jai_core-1.1.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/media/jai_imageio/1.1/jai_imageio-1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/media/jai_codec/1.1.3/jai_codec-1.1.3.jar"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-  <classpathentry kind="var" path="M2_REPO/junit/junit/4.12/junit-4.12.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/google/code/gson/gson/2.8.2/gson-2.8.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mockito/mockito-core/2.8.9/mockito-core-2.8.9.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/bytebuddy/byte-buddy/1.6.14/byte-buddy-1.6.14.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/bytebuddy/byte-buddy-agent/1.6.14/byte-buddy-agent-1.6.14.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/objenesis/objenesis/2.5/objenesis-2.5.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/geotools/gt-shapefile/19.1/gt-shapefile-19.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/geotools/gt-data/19.1/gt-data-19.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/geotools/gt-main/19.1/gt-main-19.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/geotools/gt-api/19.1/gt-api-19.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/vividsolutions/jts-core/1.14.0/jts-core-1.14.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/geotools/gt-referencing/19.1/gt-referencing-19.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/ejml/ejml-ddense/0.32/ejml-ddense-0.32.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/ejml/ejml-core/0.32/ejml-core-0.32.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-pool/commons-pool/1.5.4/commons-pool-1.5.4.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/geotools/gt-metadata/19.1/gt-metadata-19.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/geotools/gt-opengis/19.1/gt-opengis-19.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/java/dev/jsr-275/jsr-275/1.0-beta-2/jsr-275-1.0-beta-2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/jgridshift/jgridshift/1.0/jgridshift-1.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/sf/geographiclib/GeographicLib-Java/1.44/GeographicLib-Java-1.44.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jdom/jdom2/2.0.6/jdom2-2.0.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/geotools/gt-swing/19.1/gt-swing-19.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/geotools/gt-render/19.1/gt-render-19.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/geotools/gt-coverage/19.1/gt-coverage-19.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/imageio-ext/imageio-ext-tiff/1.1.20/imageio-ext-tiff-1.1.20.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/imageio-ext/imageio-ext-utilities/1.1.20/imageio-ext-utilities-1.1.20.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/imageio-ext/imageio-ext-geocore/1.1.20/imageio-ext-geocore-1.1.20.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/imageio-ext/imageio-ext-streams/1.1.20/imageio-ext-streams-1.1.20.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/vividsolutions/jts-example/1.14.0/jts-example-1.14.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/vividsolutions/jts-io/1.14.0/jts-io-1.14.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/googlecode/json-simple/json-simple/1.1/json-simple-1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jaitools/jt-zonalstats/1.4.0/jt-zonalstats-1.4.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jaitools/jt-utils/1.4.0/jt-utils-1.4.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/affine/jt-affine/1.0.22/jt-affine-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/iterators/jt-iterators/1.0.22/jt-iterators-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/utilities/jt-utilities/1.0.22/jt-utilities-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/scale/jt-scale/1.0.22/jt-scale-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/vectorbin/jt-vectorbin/1.0.22/jt-vectorbin-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/translate/jt-translate/1.0.22/jt-translate-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/algebra/jt-algebra/1.0.22/jt-algebra-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/bandmerge/jt-bandmerge/1.0.22/jt-bandmerge-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/bandselect/jt-bandselect/1.0.22/jt-bandselect-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/bandcombine/jt-bandcombine/1.0.22/jt-bandcombine-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/border/jt-border/1.0.22/jt-border-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/buffer/jt-buffer/1.0.22/jt-buffer-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/crop/jt-crop/1.0.22/jt-crop-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/mosaic/jt-mosaic/1.0.22/jt-mosaic-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/lookup/jt-lookup/1.0.22/jt-lookup-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/nullop/jt-nullop/1.0.22/jt-nullop-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/rescale/jt-rescale/1.0.22/jt-rescale-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/stats/jt-stats/1.0.22/jt-stats-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/google/guava/guava/17.0/guava-17.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/warp/jt-warp/1.0.22/jt-warp-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/zonal/jt-zonal/1.0.22/jt-zonal-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/binarize/jt-binarize/1.0.22/jt-binarize-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/format/jt-format/1.0.22/jt-format-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/colorconvert/jt-colorconvert/1.0.22/jt-colorconvert-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/errordiffusion/jt-errordiffusion/1.0.22/jt-errordiffusion-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/orderdither/jt-orderdither/1.0.22/jt-orderdither-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/colorindexer/jt-colorindexer/1.0.22/jt-colorindexer-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/imagefunction/jt-imagefunction/1.0.22/jt-imagefunction-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/piecewise/jt-piecewise/1.0.22/jt-piecewise-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/classifier/jt-classifier/1.0.22/jt-classifier-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/geosolutions/jaiext/rlookup/jt-rlookup/1.0.22/jt-rlookup-1.0.22.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-io/commons-io/2.1/commons-io-2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/geotools/gt-cql/19.1/gt-cql-19.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/miglayout/miglayout/3.7/miglayout-3.7-swing.jar"/>
+	<classpathentry kind="src" output="target/classes" path="src/main/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
