--- a/pom.xml
+++ b/pom.xml
@@ -1,103 +1,3 @@
-<<<<<<< HEAD
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
-  <groupId>Group10</groupId>
-  <artifactId>TP_Anual</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
-
-
-  <name>Sistema de Gestion Energetica</name>
-  <url>http://maven.apache.org</url>
-
-<properties>
-	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	<maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-</properties>
-
-<repositories>
-	<repository>
-		<id>maven2-repository.dev.java.net</id>
-		<name>Java.net repository</name>
-		<url>http://download.java.net/maven/2</url>
-    </repository>
-    
-    <repository>
-		<id>osgeo</id>
-		<name>Open Source Geospatial Foundation Repository</name>
-		<url>http://download.osgeo.org/webdav/geotools/</url>
-    </repository>
-    
-    <repository>
-		<id>boundless</id>
-		<name>Boundless Maven Repository</name>
-		<url>http://repo.boundlessgeo.com/main</url>
-    </repository>
-</repositories>
-
-<dependencies>
-	<dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>4.12</version>
-		<scope>test</scope>
-	</dependency>
-
-	<dependency>
-		<groupId>com.google.code.gson</groupId>
-		<artifactId>gson</artifactId>
-		<version>2.8.2</version>
-	</dependency>
-
-	<dependency>
-		<groupId>org.mockito</groupId>
-		<artifactId>mockito-core</artifactId>
-		<version>2.8.9</version>
-		<scope>test</scope>
-	</dependency>
-
-	<dependency>
-		<groupId>org.geotools</groupId>
-		<artifactId>gt-referencing</artifactId>
-		<version>19.1</version>
-	</dependency>
-
-	<dependency>
-		<groupId>org.apache.commons</groupId>
-		<artifactId>commons-math3</artifactId>
-		<version>3.6.1</version>
-	</dependency>
-
-    <!-- JPA Persistence Dependencies -->
-    <dependency>
-      <groupId>org.uqbar-project</groupId>
-	  <artifactId>jpa-java8-extras</artifactId>
-	  <version>1.0-alpha-1</version>
-	</dependency>
-    
-    <!-- driver jdbc -->
-    <dependency>
-		<groupId>mysql</groupId>
-		<artifactId>mysql-connector-java</artifactId>
-		<version>5.1.26</version>
-	</dependency>
-
-    <dependency>
-      <groupId>org.hsqldb</groupId>
-      <artifactId>hsqldb</artifactId>
-      <version>2.2.8</version>
-	</dependency>
-	
-	
-	
-	<!-- NUEVO
-	-->
-	
-		<dependency>
-=======
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -157,9 +57,7 @@
 			<artifactId>mockito-core</artifactId>
 			<version>2.8.9</version>
 			<scope>test</scope>
-		</dependency>
-
-		<dependency>
+		</dependency>		<dependency>
 			<groupId>org.geotools</groupId>
 			<artifactId>gt-referencing</artifactId>
 			<version>19.1</version>
@@ -170,6 +68,8 @@
 			<artifactId>commons-math3</artifactId>
 			<version>3.6.1</version>
 		</dependency>
+
+
 
 		<!-- JPA Persistence Dependencies -->
 		<dependency>
@@ -192,21 +92,16 @@
 		</dependency>
 
 		<dependency>
->>>>>>> login
-			<groupId>com.sparkjava</groupId>
+		<groupId>com.sparkjava</groupId>
 			<artifactId>spark-core</artifactId>
 			<version>2.5</version>
 		</dependency>
 
-<<<<<<< HEAD
-=======
 <dependency>
 <groupId>org.slf4j</groupId>
 <artifactId>slf4j-simple</artifactId>
 <version>1.7.7</version>
 </dependency>		
-		
->>>>>>> login
 		<dependency>
 			<groupId>com.sparkjava</groupId>
 			<artifactId>spark-template-handlebars</artifactId>
@@ -218,11 +113,6 @@
 			<artifactId>spark-debug-tools</artifactId>
 			<version>0.5</version>
 		</dependency>
-
-<<<<<<< HEAD
-=======
-
->>>>>>> login
 		<dependency>
 			<groupId>com.github.jknack</groupId>
 			<artifactId>handlebars-helpers</artifactId>
@@ -234,17 +124,6 @@
 			<artifactId>handlebars-humanize</artifactId>
 			<version>4.0.6</version>
 		</dependency>
-<<<<<<< HEAD
-
-	
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.21</version>
-		</dependency>
-
-</dependencies>
-=======
 		
 		<dependency>
 		  <groupId>org.apache.commons</groupId>
@@ -259,5 +138,4 @@
 </dependency>
 		
 	</dependencies>
->>>>>>> login
 </project>
