ya casi estamos

--- a/src/main/resources/usuarios.properties
+++ b/src/main/resources/usuarios.properties
@@ -1,6 +1,4 @@
-clientes=Luci69,Facu96,Meli21,Trok3,Ton42
-con-clientes=asd123,qwe123,zxc123,dsa123,1111
-id-clientes=1,1,1,1,1
+clientes=Luci69,Facu96
+con-clientes=asd123,qwe123
 admin=raptor123
 con-admin=contraseña
-id-admin=1
