--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,9 @@
 						<!-- Tell Heroku how to launch your application -->
 						<web>java -jar target/SGE-1.0.0-jar-with-dependencies.jar</web>
 					</processTypes>
+					<includes>
+						<include>src/main/resources</include>
+					</includes>
 				</configuration>
 			</plugin>
 		</plugins>
