--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,31 @@
 
 	</dependencies>
 	<build>
+
 		<plugins>
+<plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+    <outputDirectory>${basedir}/target/classes</outputDirectory>
+    <includeEmptyDirs>true</includeEmptyDirs>
+    <resources>
+        <resource>
+            <directory>${basedir}/src/main/java//resources</directory>
+            <filtering>false</filtering>
+        </resource>
+    </resources>
+</configuration>
+                    </execution>
+                </executions>
+            </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -172,9 +196,6 @@
 						<!-- Tell Heroku how to launch your application -->
 						<web>java -jar target/SGE-1.0.0-jar-with-dependencies.jar</web>
 					</processTypes>
-					<includes>
-						<include>src/main/resources</include>
-					</includes>
 				</configuration>
 			</plugin>
 		</plugins>
