--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,12 @@
 			<version>1.9.3</version>
 		</dependency>
 
+		<dependency>
+    		<groupId>org.quartz-scheduler</groupId>
+    		<artifactId>quartz</artifactId>
+    		<version>2.1.5</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 
